actualizacion de mi testeo